[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/theme/minrmachine_theme.tres" type="Theme" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/font/bit5x5_7px.fnt" type="BitmapFont" id=3]
[ext_resource path="res://scripts/ZoomLabel.gd" type="Script" id=4]
[ext_resource path="res://scripts/inventory.gd" type="Script" id=5]
[ext_resource path="res://scenes/ui_widgets/tile_container.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=7]
[ext_resource path="res://assets/textures/stone25x.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/bg_outline.png" type="Texture" id=9]
[ext_resource path="res://scenes/game_grid.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/game_grid.gd" type="Script" id=11]
[ext_resource path="res://scenes/cell.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/player_cell.gd" type="Script" id=13]

[node name="main" type="Node"]

[node name="ui_layer" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="HBoxContainer" type="HBoxContainer" parent="ui_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
custom_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ui_layer/HBoxContainer"]
margin_right = 721.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="game_glass" type="CenterContainer" parent="ui_layer/HBoxContainer/VBoxContainer"]
editor/display_folded = true
margin_right = 721.0
margin_bottom = 522.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="game_glass_center" type="Control" parent="ui_layer/HBoxContainer/VBoxContainer/game_glass"]
margin_left = 360.0
margin_top = 261.0
margin_right = 360.0
margin_bottom = 261.0

[node name="h_bar" type="MarginContainer" parent="ui_layer/HBoxContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 526.0
margin_right = 721.0
margin_bottom = 600.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="ui_layer/HBoxContainer/VBoxContainer/h_bar"]
margin_right = 721.0
margin_bottom = 74.0

[node name="MarginContainer" type="MarginContainer" parent="ui_layer/HBoxContainer/VBoxContainer/h_bar"]
margin_right = 721.0
margin_bottom = 74.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="TextureRect" type="TextureRect" parent="ui_layer/HBoxContainer/VBoxContainer/h_bar/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 716.0
margin_bottom = 69.0
texture = ExtResource( 2 )

[node name="v_bar" type="MarginContainer" parent="ui_layer/HBoxContainer"]
margin_left = 721.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="ui_layer/HBoxContainer/v_bar"]
margin_right = 303.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="ui_layer/HBoxContainer/v_bar"]
margin_right = 303.0
margin_bottom = 600.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ui_layer/HBoxContainer/v_bar/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 298.0
margin_bottom = 595.0

[node name="HBoxContainer2" type="HBoxContainer" parent="ui_layer/HBoxContainer/v_bar/MarginContainer/VBoxContainer"]
margin_right = 293.0
margin_bottom = 16.0

[node name="reset_view_button" type="Button" parent="ui_layer/HBoxContainer/v_bar/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 72.0
margin_bottom = 16.0
text = "RESET"

[node name="zoom_label" type="Label" parent="ui_layer/HBoxContainer/v_bar/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 76.0
margin_top = 4.0
margin_right = 293.0
margin_bottom = 11.0
rect_min_size = Vector2( 62.5, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "ZOOM"
valign = 1
autowrap = true
uppercase = true
script = ExtResource( 4 )

[node name="inventory" type="VBoxContainer" parent="ui_layer/HBoxContainer/v_bar/MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 293.0
margin_bottom = 145.0
script = ExtResource( 5 )

[node name="tile_container" parent="ui_layer/HBoxContainer/v_bar/MarginContainer/VBoxContainer/inventory" instance=ExtResource( 6 )]
margin_right = 293.0
margin_bottom = 39.0
tile_name = "TEST LONG NAME AND STUFF AND THINGS A LOT MORE THAN NORMAL"

[node name="tile_container2" parent="ui_layer/HBoxContainer/v_bar/MarginContainer/VBoxContainer/inventory" instance=ExtResource( 6 )]
margin_top = 43.0
margin_right = 293.0
margin_bottom = 82.0
tile_name = "TEST2"

[node name="tile_container3" parent="ui_layer/HBoxContainer/v_bar/MarginContainer/VBoxContainer/inventory" instance=ExtResource( 6 )]
margin_top = 86.0
margin_right = 293.0
margin_bottom = 125.0
tile_name = "TEST3"

[node name="game_area" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="game_area"]
editor/display_folded = true
anchor_mode = 0
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 7 )

[node name="movement_slew" type="Tween" parent="game_area/Camera2D"]

[node name="bg_stones2" type="Node2D" parent="game_area"]

[node name="stone_bg" type="Sprite" parent="game_area/bg_stones2"]
self_modulate = Color( 0.40625, 0.40625, 0.40625, 1 )
position = Vector2( -1250, -1125 )
scale = Vector2( 5, 5 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 625, 625 )

[node name="stone_bg2" type="Sprite" parent="game_area/bg_stones2"]
self_modulate = Color( 0.75, 0.75, 0.75, 1 )
scale = Vector2( 5, 5 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 125, 125 )

[node name="bg_outline" type="Sprite" parent="game_area/bg_stones2"]
self_modulate = Color( 0.164063, 0.164063, 0.164063, 1 )
position = Vector2( -25, -25 )
texture = ExtResource( 9 )
centered = false

[node name="game_grid" parent="game_area" instance=ExtResource( 10 )]
script = ExtResource( 11 )

[node name="player_cell" parent="game_area/game_grid" instance=ExtResource( 12 )]
position = Vector2( 250, 250 )
script = ExtResource( 13 )
width = 5
height = 5
speed = 0.1

[connection signal="pressed" from="ui_layer/HBoxContainer/v_bar/MarginContainer/VBoxContainer/HBoxContainer2/reset_view_button" to="game_area/Camera2D" method="_on_reset_view_button_pressed"]
[connection signal="player_moved" from="game_area/game_grid/player_cell" to="game_area/Camera2D" method="_on_player_moved"]
